--- a/OutOfPaper.Drivers/OutOfPaper.Drivers.csproj
+++ b/OutOfPaper.Drivers/OutOfPaper.Drivers.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TfhkaNet">
+      <HintPath>Libraries\TfhkaNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
